--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,9 @@ project(evilbc)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_COMPILER "clang++")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/out)
-set(CMAKE_SHARED_LINKER_FLAGS "-ldl")
+set(CMAKE_SHARED_LINKER_FLAGS "-static-libstdc++ -ldl -Wl,--version-script=${CMAKE_CURRENT_SOURCE_DIR}/version_script")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++ -fno-exceptions -fno-unwind-tables")
 
 add_library(
         evilbc
